--- a/index.html
+++ b/index.html
@@ -1,55 +1,40 @@
-<html>
-<head>
-	<style type="text/css">
-     #myprg
-     {
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+     <title>
+     Assignment
+     </title>
+     <link rel="stylesheet" href="css/style.css"/>
      
-     	width: 600px;
-     	margin: auto;
+ </head>
+ <body>
+   <div id="myprg">
+    <h1>
+    My First Website
+    </h1>
+    Welcome to my website! Here are some things I enjoy..
+    <br>
+    <ul>
+       <li>Gardening</li>
+       <li>Playing Shuttle</li>
+       <li>Reading Novels</li>
+       <li>Singing</li>
+     </ul>
+     <br>
+     <h3>
+     Favorite Quotes
+     </h3>
+     <blockquote>
+      <p>
+      "The best preparation for tomorrow is doing your best today."
+      </p>
+     </blockquote>
+     <blockquote>
+      <p>
+      "Being able to do what you wish is the best thing in the world!"
+      </p>
+     </blockquote>
+   </div>
 
-
-     }
-     #hai
-     {
-     	border-style: solid;
-     	padding: 5px;
-     	border-color: blue;
-     	text-align: center;
-     	margin-left: 0px;
-
-
-     }
-	</style>
-</head>
-<body>
-	
-<div id="myprg">
-<h1>
-My First Website
-</h1>
-Welcome to my website! Here are some things I enjoy..
-<br>
-<ul>
-<li>Gardening</li>
-<li>Playing Shuttle</li>
-<li>Reading Novels</li>
-<li>Singing</li>
-</ul>
-<br>
-<h3>
-Favorite Quotes
-</h3>
-<blockquote id="hai">
-<p>
-"The best preparation for tomorrow is doing your best today."
-</p>
-</blockquote>
-<blockquote id="hai">
-<p>
-"Being able to do what you wish is the best thing in the world!"
-</p>
-</blockquote>
-</div>
-
-</body>
+  </body>
 </html>
